--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Capstone Project</string>
+    <string name="app_name">Kamus Bahasa Isyarat</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home">Home</string>
     <string name="favorite">Favorite</string>
@@ -7,4 +7,9 @@
     <string name="ada_yang_error">Ada yang Error</string>
     <string name="data_kosong">Data Kosong</string>
     <string name="detail_kamus">Detail Kamus Activity</string>
+    <string name="title_maps">Maps</string>
+
+    <string name="navigation_buka">Membuka Navigasi</string>
+    <string name="navigation_tutup">Menutup Navigasi</string>
+    <string name="title_favorite">Favorite</string>
 </resources>
